--- a/01 摄影是什么.md
+++ b/01 摄影是什么.md
@@ -1,4 +1,5 @@
 
+
 # 基础摄影读书笔记 - 01 摄影是什么
 
 > A Chinese Notes of Basic Photography 
@@ -114,138 +115,5 @@ https://zhuanlan.zhihu.com/easycam
 摄影中的构图，就像是音乐或者文学中的创作一样充满变化，可以强化表达对象、主题、风格等等。好的构图可以帮助观众以你所希望的方式来对图片进行阅读理解，这样你的观念交流就成功了。你拍摄的每个照片都涉及到了你的某种创作决定，甚至是简单到在哪里放相机或者什么时候按快门都很重要。
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+## 摄影扮演的角色
 
