--- a/01 摄影是什么.md
+++ b/01 摄影是什么.md
@@ -117,3 +117,178 @@ https://zhuanlan.zhihu.com/easycam
 
 ## 摄影扮演的角色
 
+如果你在技术上有自信，也注重构图，却不理解为啥要拍下这幅照片，那也没啥意义。Joel Meyerowitz 将摄影的技术理解和动人力量进行了结合。摄影的目的可能很简单，单纯的纪录某个人或者事物。也可能很含糊，将主观感受置于影像之中，比如安全感、幸福感、威胁等等。作家拿起笔之前也不可能不知道自己要下笔填写数据表格还是作诗。可是对于摄影来说,有一种很可怕的风险,就是你匆忙地安装好各种设备,投身于对焦曝光拍摄等流程中,却很少去思考你所拍摄的图片的意义,以及为何要以那种方式来拍摄.
+
+当然,人们拍照的原因五花八门.大多数是纪念一下旅游,或者拍家人/朋友等等.这些都满足了摄影的社交功能,这也很重要,凝固了某个瞬间,然后可以在多少年之后来回味.
+
+有时候摄影作品还能展示人生艰难,能让其他人感同身受.这就需要拍摄者对拍摄对象进行详细地调查了解,甚至用在其它语境下被认为是窥探的方式等等.如果你希望自己的作品能够获得观众的共鸣,就必须能够处理好与拍摄对象之间的复杂关系.
+
+对商业化广告和销售的摄影作品来说,了解如何最好地表达主题来获取目标受众的积极反应,也很重要.拍摄情景中的每个细节都必须深思熟虑.拍摄地点或背景是否能够让消费者有积极的认同感?模特的服装是否太超前或者太落伍?道具和装饰物还必须要符合你试图表达的生活方式和氛围.一般来说,传递给用户观看的图片必须能够让你要推销的商品或者服务更有吸引力.在这个过程中间,你必须能够拍下衣服构图上就具有吸引力的照片;展示产品;可能还要刘霞空间放一些解说文字;可能需要调整尺寸符合明信片或者杂志页面之类的版面,以便最终印刷.
+
+新闻图片就又不一样了.你拍到的一个事件的照片可能就是最终出版的那张.表达或者行动的那个瞬间就得对整个氛围进行总结,虽然你也可以通过选择拍摄的时间地点和拍摄对象来润色报道.长期以来都有一种假设,认为新闻摄影者是不偏不倚的中立观察者,只记录着他们遇到的事件.而现实要复杂一些,因为实际上没人能够彻底中立.拍摄者拥有它们自己的信仰(社会理念/文化背景/政治立场/宗教信仰等等),也可能有自己的偏见.
+
+从警戒线后面拍摄,可能会展现出人群带来的压迫感,而在人群前面拍照,就会展示出权威机构的压制.对政客或者运动员之类的人物进行肖像拍摄的时候,也会有类似的情况.人的表情可以变化,可以悲伤欢乐无聊担忧傲慢等等,所有的都发生在几分钟之内.从中选择一个瞬间进行拍摄,然后贴上文字标签去报道,对真相进行修补毫无困难;所以拍摄者不应该忽视他们自己的信仰和偏见.
+
+这些区别说明拍摄者总是可以操纵观看者的感受.现在数码处理还能够天衣无缝地添加或者修改图片元素,这些内容在本书第14章有更详细讲解.所以那种过时的认为"眼见为真","相机不骗人"的想法,应该摒弃了.
+
+摄影还可以用于培训.医疗等等,作为科学证据.这些场景中就可以充分利用其细节和清晰度,这也是这类图片通用的语言,根本不需要去写什么文字就能被人理解.然而很不幸,图片用作科学依据的历史,也充满操纵,也有作假的时候.比如19世纪末20世纪初的时候,就有人用摄影来拍摄人的面部形态,认为能够反映人的特质,比如是不是罪犯/同性恋/有疾病或者精神不正常等等.这些拍摄的目的是要从社会中识别出来具有这些特质的人,然后清理掉,然后就认为能够得到一个纯洁的种族了.
+
+目前还是有一些摄影作品关注猎奇,通常是游客在假期拍摄的异国情调,比如可爱的印度乞丐男孩或者非洲部落原住民,深知无家可归的流浪汉等等.还有很多其他的主题,比如门窗,比如坟墓或者废品处理场的荒芜等等,甚至涂鸦作品,都吸引着各种摄影者.作为摄影新人,你必须和自己进行协商,要理解自己如何定义摄影,以及为何进行拍摄.
+
+  
+另外一个层面上,装饰性质的摄影作品,比如日历图片或者社论插图之类给杂志用的配图,通常也表达了自有的独特美感,比如风光啊,人像啊,日常生活中常见到的自然形式等等.不过美是一种很主观的体验,会受到态度和经验的影响.不过你对一幅摄影作品所观看得到的感受,可能和其他人相似,这种交集是存在于一定范围内的.不过,走上邪路也容易,比如开始媚俗讨喜,过分修饰,陈旧俗套又自我满足等等.
+
+当然摄影也不总是和他人交流目的的;你也可以从中得到自我满足和自我表达,其他人从你的作品中如渠道的信息可能和你的感受有所区别,甚至他们能不能有感受都不好说.一些摄影作品的原始图像就都是这样的,完全没有任何的商业或者艺术上的窠臼,往往是纯粹的私人的表达和自我沉迷的产物.以下这些摄影者都符合这类特征:Jo Spence, Diane Arbus, Nan Goldin, Wolfgang Tillmans, Joel-Peter Witkin, Hans Bellmer/ Bernd/Hilla Becher.
+
+摄影还可以扮演很多其他角色:现实和幻想的混合,艺术和科学的杂糅,交流和非交流性质的,等等.摄影还在一些现代艺术运动中扮演重要角色,比如超现实主义中对摄影的真实的或者预设的客观性就被用于营造惊人的艺术效果.另外要记住摄影并不一定就是拍摄对象和观看者之间的最后环节,编辑和各种展览组织者等等,都喜欢把他们的意愿强加到最终成品上去.最终图片会被剪切调整尺寸,图上会被添加文字说明,图片布局也都任由他人摆布.这些行为中任意一种都可以强化/减弱/扰乱拍摄者原本要表达的内容.这些摆布者还都只是这个庞大体系的基层成员.他们甚至可以在多年之后来对你的老照片进行各种新的处理,来对你造成更大的伤害.
+
+## 改变你对摄影的态度
+
+
+目前,摄影比以往任何时候都更加流行,但摄影作为创意媒体从其他艺术家/画廊/出版商/收藏者等公共群体中获得称赞和认同的难度很大.在过去的日子里,人们对于摄影能做什么不能做什么/有哪些利弊等等的看法都有了很大变化,,自从摄影被发明出来之后一直如此,随着时代潮流而演变.在十九世纪(现代意义的摄影被认为是1839年发明的)的时候,摄影者被当做是画家的敌人.画家们也经常公开批评摄影者这些闯入这毫无艺术能力和知识.某种程度上当时的这种指责还是有点道理的,学一点化学知识就能来拍照了;但对于艺术的了解还并不能直接帮助创作/用光等等内容.
+
+
+
+### 艺术和纪录
+
+在十九世纪初期,很多人都尝试去完善摄影术,发明很多步骤和技术,但都有类似目标:将相机内的图像固定住,得到更真实更多细节的照片.第一次这样拍摄出的照片被认为非常神奇,人们赞誉其中的美和成像细节的丰富;这需要很多的经验和知识才能拍摄出来.
+
+到了十九世纪末期,摄影用到的装备啊材料啊就都比较容易上手了,摄影也开始传播到世界的各个角落,被用于艺术目的,以及纪录人物/地点/事物等等.到了二十世纪初期,快照相机(snapsh camera)出现了,洗印服务也有了长足发展,对于初学者来说就更容易了,所以这时候就有很多用于娱乐等等 用途的黑白摄影作品.有的"严肃"摄影者就觉得有必要和民俗保持距离,还试图尽量去混进艺术家的圈子里面得到认同,所以他们就尝试强制媒体让摄影作品看着更类似如今的绘画.当照片洗印开始流程化规模化的时候,这批人还想办法尝试尽量让照片具有早期的"手工风格".他们称自己为"肖像摄影师",拍摄具有图画风格的对象,还经常使用柔焦镜头之类的附件,打印的时候也都是印到花纹纸上面,极尽细节的繁琐.
+
+其他的摄影者更多感兴趣于用摄影作为一种新潮流行的现代化图片生成手段,主要关注的是摄影比其他传统手段所具备的优势.他们利用新技术来重新利用打印页面上图片,并且收到新潮流行文化和现代艺术的影响,也变的越来越抽象.摄影者看到画家们对绘画的某些特质(比如表面,纹理等等)的关注,然后决定也专注于摄影所能做的内容,而不再致力于让照片和绘画作品更相似.作为对绘画模拟的反叛,在二十世纪初期的欧洲和美国,出现了大批直观摄影(straight photography)的拍摄者,比如Walker Evans, Paul Strand,Albert Renger-Patzsch等等.他们最大程度利用黑白摄影的特质,而这些特质在此前被认为是毫无艺术性的:整个画幅都是锐利的,灰度层次丰富,简单地将日常物品在自然光下拍摄出美的形状.技术上的优势被发挥到了极致.这使得摄影终于也发展出了自己的特有审美,和绘画以及其他艺术形式还都不一样.这种审美被更多的摄影家所追求,比如Edward Weston, Ansel Adams 和 Imogen Cunningham等人,他们的作品都具有锐利的对焦,细节丰富,纹理清晰,直到20世纪60年代之前,都一直是艺术摄影的标杆.
+
+
+新闻报纸和杂志开始印上照片,就打开了摄影媒体和坦率摄影的市场.人们开始拍摄动作和其他内容,而不再先严肃思考而后拍摄.这是手持相机带来的繁荣,让人们能够打破古老的绘画规则,随心所欲来创作.
+
+20世纪的30年代和40年代是图片杂志和摄影报道的大爆发时代,这个时期电视还没有广泛普及.这个时代也见证了摄影专业分类的稳步增多:广告摄影,商业摄影,工业摄影,肖像摄影,医疗摄影,科学摄影,航空摄影等等.这些大多数都还是用黑白摄影.在20世纪50年代,彩色摄影才逐渐有所增长,但对出版领域来说还是昂贵难用.
+
+
+### 1960年代及以后的新方法
+
+年轻人突然都想要拥有一台相机,想用来自我表达,并且描绘周围的世界.新的摄影家关注当代艺术家,但对已经建立的摄影俱乐部或者有着狭隘规则和视野的联合会既不了解也不感兴趣.随着照片在人们当代生活中越来越常见,摄影开始被集成进现代绘画.打印,甚至雕像领域,新一代的年轻艺术家,比如Bruce Nauman,Robert Smithson ,Ed Ruscha 都开始使用摄影作为一种工具了.他们眼中的摄影和之前的艺术摄影家们大不相同,他们对摄影技术不那么感兴趣,而关注的是摄影的便捷,快速拍摄记录事件和表演的能力,摄影就几乎成了日常流行文化的一部分,而不是什么艺术.
+
+这时候在学院和大学里面开始有教授摄影的课程了,而之前摄影都被当作是一种技术培训而已.美国率先创立了摄影学的学位课程,其中包括了艺术和设计,社会学和传播学等内容.不过,这以后就很少在看到有一个人单独把自己的高质量摄影作品作为一本书来出版的了.深知对于一些很成熟的艺术画廊来说也很少售卖甚至都很少悬挂照片了,更不用说致力于摄影的公共画廊了.结果就是对于摄影者来说,单打独斗想被人看到或者像闯出名气就都很难了.深知一些杂志或者新闻报纸有时候都不怎么在摄影作品旁边注明拍摄者了,而文稿写手好歹都是有署名的.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
