--- a/01 摄影是什么.md
+++ b/01 摄影是什么.md
@@ -50,7 +50,7 @@ https://zhuanlan.zhihu.com/easycam
 
 你不需要去理解化学反应或者数码电子知识，也能拍好照片，不过要是能学到充分的技能来控制拍摄结果还是很有必要的，这样你拍起来也更有信心。下面讲一下化学和数码方式下摄影的关键技术步骤。每一步都会在后面的章节中有详细讲解。
 
-### 成像和曝光一幅图片
+### 成像和曝光
 
 成像就是对你的拍摄对象形成一个光学图像，这对于无论是胶片还是数码摄影来说都是必须的。拍摄对象的光穿过镜头，然后弯曲汇聚到一点，形成一个像，通常这个像都比实物小。镜头就是广盒子或者相机的前部，而在成像位置则是面对镜头的胶片或者传感器等等记录介质。在你按下按钮之前，快门都关闭，避免光线进入传感器或者胶片。曝光的两通常取决于多个参数的组合，这些参数包括了快门开放时间、光线束通过镜头的直径。后者通过光圈来控制，就好像是眼睛的瞳孔一样。这两者都控制了进一步的视觉效果。快门时间决定了记录动作的方式，模糊或者凝结；快门决定了成像范围的深浅（景深）。
 
