--- a/01 摄影是什么.md
+++ b/01 摄影是什么.md
@@ -170,11 +170,18 @@ https://zhuanlan.zhihu.com/easycam
 这时候在学院和大学里面开始有教授摄影的课程了,而之前摄影都被当作是一种技术培训而已.美国率先创立了摄影学的学位课程,其中包括了艺术和设计,社会学和传播学等内容.不过,这以后就很少在看到有一个人单独把自己的高质量摄影作品作为一本书来出版的了.深知对于一些很成熟的艺术画廊来说也很少售卖甚至都很少悬挂照片了,更不用说致力于摄影的公共画廊了.结果就是对于摄影者来说,单打独斗想被人看到或者像闯出名气就都很难了.深知一些杂志或者新闻报纸有时候都不怎么在摄影作品旁边注明拍摄者了,而文稿写手好歹都是有署名的.
 
 
+不过到了二十世纪七十年代,这些情况就都发生了变化.有冒险精神的画廊开始进行摄影展了,也有越来越多的人来参加.来自公众和学生的需求也促使出版商开始出版一系列的书籍来展示单个摄影者的作品.摄影作品开始被作为画廊的精细艺术品来进行销售,人们购买来进行投资.年长的摄影师比如Bill Brandt, Minor White, Andre Kertesz 都被艺术经纪人挖掘出来,从尘封中唤醒,开始在各种国际艺术中心展出其作品.参展的摄影师中,William Eggleston和 Stephen Shore都开始成为首批在大博物馆展出彩色摄影作品的摄影家.
+
+到了二十世纪八十年代,彩色摄影材料能够提供的画质有了明显改善,而且价格也有所降低.这时候彩色冲洗工作室开始出现了,这让每个人都可以更好更好地进行彩色影像的处理和打印了.最开始普罗大众更乐于使用彩色摄影,后来艺术摄影家们也接受了这个选择.打印页面上的彩色影像复制成本也在降低;新闻报纸都开始使用彩色照片了.这时候开始,大尺寸的彩色照片也可以制作了,这就吸引了一大批艺术摄影者来创作大幅作品,和古典大师的绘画作品一样大,广告牌尺寸,或者电影院屏幕那样大,而不仅仅是书本杂志页面和小印刷品了.
+
+如今,摄影器材已经不再那么繁琐复杂,操作也对用户更友好,再加上摄影开始有更大规模的受众,这就带来了图像的繁荣.画廊,图书,以及相关的教育都带来了关于摄影更具批判性的讨论-如何通过视觉语言来交流思想.如今摄影被不同的人用在各种用途中,使得摄影已经和其他艺术形式一样充满变化.实际上,目前摄影已经是无处不在了,成为了日常生活的一部分.数码相机,扫描仪,互联网,也让照片的发布流传更加官方更加快速,随着技术进步和思想发展,摄影也必然还会有所扩展.对摄影语言的更宏大解读以及新技术的涌现带来了摄影的更广泛应用,不仅可以表达自我,也可以用于记录客观世界.
+
+## 个人风格和手法
 
 
+你的摄影风格,是从你自己的兴趣和态度而发展出来的,还受到你所遇到的机会的影响.比如你感兴趣的是拍摄人还是不用顾忌人际关系的静物之类的?你喜欢拍摄那种雷鸣电闪之间的快速动作,还是更喜欢拍摄缓慢但是洗涤灵魂的风光或者静物?
 
-
-
+如果你想成为专业摄影师,你可能希望做一个多面手,随着当地的需求来拍摄.或者你可能专攻某一特定领域,比如自然离世,社会治安,科学研究或者医学摄影等等,把摄影和其他领域的技能和只是相结合.这些应用中有的具有非常狭窄的个人结度空间,尤其是你必须清晰表达信息,精准地满足某些特定需求.如果你自己为自己来拍摄照片,那就有很大自由度了.所以你最好发展出自己的视觉风格
 
 
 
