--- a/01 摄影是什么.md
+++ b/01 摄影是什么.md
@@ -1,4 +1,4 @@
-
+ 
 
 # 基础摄影读书笔记 - 01 摄影是什么
 
@@ -181,10 +181,13 @@ https://zhuanlan.zhihu.com/easycam
 
 你的摄影风格,是从你自己的兴趣和态度而发展出来的,还受到你所遇到的机会的影响.比如你感兴趣的是拍摄人还是不用顾忌人际关系的静物之类的?你喜欢拍摄那种雷鸣电闪之间的快速动作,还是更喜欢拍摄缓慢但是洗涤灵魂的风光或者静物?
 
-如果你想成为专业摄影师,你可能希望做一个多面手,随着当地的需求来拍摄.或者你可能专攻某一特定领域,比如自然离世,社会治安,科学研究或者医学摄影等等,把摄影和其他领域的技能和只是相结合.这些应用中有的具有非常狭窄的个人结度空间,尤其是你必须清晰表达信息,精准地满足某些特定需求.如果你自己为自己来拍摄照片,那就有很大自由度了.所以你最好发展出自己的视觉风格
+如果你想成为专业摄影师,你可能希望做一个多面手,随着当地的需求来拍摄.或者你可能专攻某一特定领域,比如自然离世,社会治安,科学研究或者医学摄影等等,把摄影和其他领域的技能和只是相结合.这些应用中有的具有非常狭窄的个人解读空间,尤其是你必须清晰表达信息,精准地满足某些特定需求.如果你自己为自己来拍摄照片,那就有很大自由度了.所以你最好发展出自己的视觉风格,不需要压力就可以有动力驱动自己,在各种专业任务中有清晰明确的目标.构建你自己的独有摄影组合,目标是让你能够更成功,从长远来看,你能够为客户提供更新奇有趣的创意,而不只是市场上已有风格的重复.
 
+风格很难定义,但当你看到的时候还是能认出来的.图像能够具有拍摄对象的几种主要特征:情绪(幽默,戏剧化,浪漫等等),写实或抽象,影调和色彩,构图,甚至图片比例.技术当然也很重要,不论是镜头选择还是图片打印,都很重要.不过风格更多是关于观看方式的.
 
+一个建议:无论你所从事的是那种专业拍摄活动,不管是商业的还是精细艺术拍摄,都建议风格不要盖过内容.很多摄影者都会发现他们陷入到了标签化的定义之中,失去了最初让他们开始摄影的那种快乐,而是让他们不断为客户重复自己所最擅长最知名的拍摄风格.
 
+### 内容和意义
 
 
 
