--- a/01 摄影是什么.md
+++ b/01 摄影是什么.md
@@ -189,17 +189,28 @@ https://zhuanlan.zhihu.com/easycam
 
 ### 内容和意义
 
+通过看其他人的作品可以有助于你自己提高摄影水平，但到头还得落实到实践上，需要你自己长时间去探索精炼出你认为重要的和要表达给人看的内容．一定不能弄成公式，教条，那样一来你拍啥都看着一样了．秘诀就是抽取每个拍摄对象的本质，而不要重复你自己．人们应该能够认出来照片中你的风格所在，但又能通过你的表达方式来发现拍摄对象或者情境的独特之处．
+
+在个人作品中，照片的内容和含义可以有很大变化.摄影师 Grace Lau 的‘21st Century Types’ 项目,探索了个体和一个地方的人对世界上其他地方人的看法.Lau在英格兰东南的黑斯廷斯(Hastings)设立了工作室,来拍摄过往路人,并且使用道具来探索中国和欧洲之间的联系.
+
+Katy Grannan拍摄的肖像令人印象深刻,检验了拍摄对象想要在镜头面前表现出的样子.她的早期作品是拍摄的一个陌生人的肖像,他们通过新闻广告认识的.她的照片并不具有纪录性,而是充满舞台效果.她的人物都摆着姿势,内容和含义都基于敏锐的观察和细致的姿势设计.她拍摄的风光之类的照片受到她在美国西北生活经历的影响,在这些独特环境中,她对每个修饰性的背景内容都投入了大量精力,展现得都平凡但又具有丰富细节.拍摄对象有的穿服装,有的不穿,配合Grannan做出特定姿势,从而是拍出来的照片有一种微妙又逐渐增强的亲密感.
+
+同时代的很多其他摄影师走得更极端,将这种舞台影像拍摄得极其逼真,如, such as Jeff Wall, Hannah Starkey, Gregory Crewdson,他们都创建舞台造型重现,拍摄已经发生的事件,而原来的角色都被换成了演员,或者让整个场景都看上去好像是处在真实之中.当然,舞台造型已经出现很久了,从摄影术发明的时代就开始有了.
+
+另外还有Julia Margaret Cameron 和 H. P. Robinson等摄影者着重于以叙事的方式进行拍摄.这种舞台方法在电影中用的很多,在时尚摄影和广告静态摄影中也用的很多.
+
+有时候个人作品的内容海鲫鱼版抽象的一些画面元素,比如颜色.线条.影调等等,都比具体的拍摄对象更重要.也就意味着摄影师会对主体选择和设计来满足对自己感兴趣内容的表达,即便是最简单的形状也都可以表达他们要传递的含义.比如有的图片甚至根本不用有任何细节,但也能够表达出照片和记忆之间的关系.
+
+看看著名摄影家的作品:Henri Cartier-Bresson热爱任性,温柔幽默,在创作上又很有天赋;Hiroshi Sugimoto对海景进行严肃精细地再现;Robert Demachy拍摄的是浪漫的写真.Cindy Sherman, Jeff Wall, Martin Parr, Keith Arnatt, Mari Mahr等等都是有着各自表达内容和意义的独特方法的摄影者.他们的作品都非常独特,令人着迷.
+
+在科技展示等用途中,摄影的具体需求使得个人特征不那么明显.但即便是如此,也能从中看到个人的视觉表达,比如Harold Edgerton博士拍摄的高速摄影作品,Eadweard Muybridge的运动研究,还有Killian教授的医学摄影,都非常杰出.
 
 
+## 衡量成功
 
+判断一幅照片是否成功是没有公式的.我们都处在对自己作品进行过度解读的危机之中,总是试图从图片中读出我们想要读到的内容,然后会一起拍摄时候的建楠,而不是想到作为作品的最终效果.估计只有技术质量最容易评判吧,不过即便是技术质量方面的评价,好坏之分也要取决于照片的情绪氛围等.
 
-
-
-
-
-
-
-
+大多数商业摄影都可以针对他们对商业需求的满足程度来衡量,因为他们本身就是用于沟通交流的生意.海报或者杂志封面,
 
 
 
