--- a/02 光线:图像形成的基础.md
+++ b/02 光线:图像形成的基础.md
@@ -6,3 +6,74 @@ https://zhuanlan.zhihu.com/easycam
 
 记笔记的人：[cycleuser](https://www.zhihu.com/people/cycleuser/activities)
 
+
+你并不需要学习物理学,也能拍好照片,不过如果能了解光线的特性以及镜头如何处理光线,能让你在摄影实践上有更宽的视野.实际上核心的物理原理都特别简单,很容易理解.
+
+这本书从光线开始说,因为光是摄影的最本质内容.什么是光?在你要照明一个物体的时候,使用镜头的时候,或者探索了解颜色的时候,知道光的哪些基本性质对你有帮助?从光和颜色开始,我么逐渐趋讨论为什么面或者体呈现养猫,以及光线是如何通过玻璃透镜发生弯曲(折射)来形成可用的像.
+
+对任何照相机或者放大机来说,镜头都是核心.用一个最简单的玻璃放大镜片,你就能看到镜片成像的效果了.这些内容还会引出后面更多的其他摄影设备方面的内容,也有助于你理解拍摄高质量照片的重点所在.
+
+
+## 光线本身
+
+光是眼睛观看和相机成像的基础.摄影这个词的英文Photography的本意就是用光绘画.可能你太习惯光了，都对它习以为常了．光是我们眼睛感受的对象，就像是我们耳朵听声音，舌头尝味道一样．光线将整个世界以视觉传递给我们的眼睛．在拍照的时候有选择地使用光线，你就可以得到对应的特定效果．视觉信息以适当范围的光线通过镜头转移到了感光材料上，然后在最后一环的打印之后，光线又从打印的照片上反射出来，让我们能看到照片欣赏照片．就像你现在读书的时候，光就从书本上射到你的眼睛里，让你感受起来好像是现实世界中作者和你在进行对话一样．可是到底什么是光呢？
+
+可见光是从恒星或者类似的其他辐射源中发出的一段特定波段的电磁波．有下面的几个重要特性：
+
+1. 光具有波动性，就类似水面的波纹．波长的变化导致了我们眼睛看到的颜色不同．
+2. 在均一介质中，光以直线传播．可以看到阳光的光线,还能看到光被阻拦而形成的阴影.
+3. 光速极快,真空中大约有三十万公里每秒.空气中稍微慢点但也基本差不多,水中或者玻璃中速度会降低.
+4. 光还具有粒子性,可以让颜色褪去,可以导致胶片中的化学变化,引起数码相机传感器中的电位变化,等等.光线越密的地方,光子越多.
+
+
+## 波长和颜色
+
+我们能看到的可见光,只是电磁波中的一小部分而已.电磁波是包含了从上百米波长的无线电波到波长微乎其微的宇宙射线和伽马射线的.每个波段的电磁波都和下一波段互相接合,但也都有各自的特征.比如无线电波就可以远距离传输.X光就可以穿透钢板给人看病诊断或者安检使用.大多数的电磁波都不能被人眼直接看到.咱们的眼睛所能看到的波段非常窄,大概只覆盖了400nm到700nm这么个区间而已.这个范围内的电磁波就是我们所说的可见光.
+
+白色的光其实是多重不同波段可见光的混合.如果只有少数的几个波段的光,就会看到颜色了.比如在400到450nm之间的就是深紫罗兰色.随着波长增加到450-500nm就逐渐变成蓝色了,然后从500-580nm就看着是蓝绿色,从580-600nm就是黄色了.黄色逐渐变成成色,然后到650nm就是红色了,超过700nm以后就是红外线了,一般就是人类看不到的了.所以在各种不同的白光(比如阳光/灯光/闪光灯光等)中,都有这些不同波段的彩色光.
+
+人眼的视网膜上面有两种感光细胞,视杆细胞和视锥细胞.视杆细胞主要是判断明暗的,相当于一个黑白传感器.视锥细胞一般是分三种,分别能感受蓝绿红三种颜色.如果这三种颜色的光比例相当,你看到就觉得是白色的,或者是自然的灰色.如果这几种颜色光比例不平衡,可能是有更多的长波长的红光,或者短波长的蓝光少些,你就会看到颜色变成类似成色的了,就像是每天日出日落时候的天空一样.
+
+要记住可见光的排列次序.当你要理解黑白胶片上不同颜色的相应效果的时候这很有用,另外在你用特定颜色滤镜或者暗房用安全灯的时候也要用得到这些知识.其实人眼对颜色敏感的散种感光细胞也正好启发了彩色摄影胶片和数码摄影传感器的发明.
+
+## 阴影
+
+
+从恒星之类的光源发出的光射向各个方向,沿各个方向直线传播.而小体积的光源,比如小灯泡或者蜡烛,就会产生很硬的光,有深色锐利边界的阴影.晴空中的太阳或者月亮的光也有类似效果,因为距离地面苔原了,所以也可以看作是电光源了.小的闪光灯或者手电也能制造类似的光效.你可以常使用桌面台灯来做这个实验试试.直接用这种硬光照射对象,会在照射到的地方实现明亮的效果,但挡住的地方就完全处于阴影之中了.
+如果在光源到照明对象之间放一张纸来散射,就可以把光柔化(或者也可以不直接照射拍摄对象,而是使用粗糙反射面来柔光).阻挡在光路中的纸张允许光线部分通过,并且散射了整个光束.这样就有散射的光射到了原来完全被阴影覆盖的部位上,这样会对一个很大区域的各个部分补充了光线.这时候照明对象的影子边缘就柔和了很多,阴影也有建变形了,你用的散射材料越大,距离光源越近,生成的光就越柔和,阴影部分的反差就越小.这是因为大面积的光不能被照射对象完全挡住;大部分之前在阴影中的部位都能够接收到一些光纤了,所以就导致了影子变得柔和了.这就像是太阳在天上,云彩就相当于柔光板,把光源的光散射到了更大的面积上.
+
+在摄影实践汇总,要能认清不同方向的光,区分不同硬度的光,柔光,以及中间的步骤等等.阴影部分的质量严重影响了拍摄对象和场景的视觉效果.一定要记住,这可不是你在相机里面改改设置或者后期折腾一下就能搞定的事情,虽然有的数码后期软件可以提供一些光效来模拟,但这些效果和拍摄现场的物理效果相比还是不太一样的.理解和控制光线的更多细节在本书第七章.
+
+## 光照表面
+
+
+当光线照到一个表面的时候,比如建筑或者风光或者人像等等,接下来的效果要取决于这个表面材质的纹理/影调/颜色,以及入射角和光本身的颜色组成.
+
+### 不透明材料
+
+如果材料完全不透明,比如是金属或者砖石之乐诶的,那么光线就有的被吸收有的被反射,吸收的就成了热.越暗的材料,反射的光越少.因此深色的相机套在阳光下比亮银色的热得更快,因为吸收的光线更多.
+
+如果材料本身有颜色,就会反射这个颜色所属波段的光,吸收大部分其他波段的颜色光.比如蓝色颜料就会反射蓝光,吸收红光和绿光.但如果你的光线本身缺少某种波长,那么这就会改变对象的颜色效果.举个极端的例子,用深红的光线照射深蓝色的物体,看上去就几乎是纯黑的.你需要弄清楚这些效果,然后才能去使用颜色滤镜(本书第9章).颜色也可以在后期改变,如果你扫描了负片或者数码打印品,就可以在后期用软件来对颜色进行各种调整(参考本书14章).
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
