--- a/02 光线:图像形成的基础.md
+++ b/02 光线:图像形成的基础.md
@@ -56,7 +56,17 @@ https://zhuanlan.zhihu.com/easycam
 如果材料本身有颜色,就会反射这个颜色所属波段的光,吸收大部分其他波段的颜色光.比如蓝色颜料就会反射蓝光,吸收红光和绿光.但如果你的光线本身缺少某种波长,那么这就会改变对象的颜色效果.举个极端的例子,用深红的光线照射深蓝色的物体,看上去就几乎是纯黑的.你需要弄清楚这些效果,然后才能去使用颜色滤镜(本书第9章).颜色也可以在后期改变,如果你扫描了负片或者数码打印品,就可以在后期用软件来对颜色进行各种调整(参考本书14章).
 
 
+反光表面的光洁度也影响了光线反射的行为.哑光表面,比如蛋壳/绘图纸或者干燥皮肤,都会导致光线的漫反射,均匀分布.这时候光线照射方向就没多大区别了.可是如果反光表面光滑有光泽,比如想玻璃或者镜子之类的东西,就会主要发生规则反射,向对称方向反射光线,也就是镜面反射了.
 
+如果你的光线以直角射入镜面,就会被直接原路反射回来.这样就得到了眩光,比如机身内置闪光灯拍摄平面的玻璃窗或者光滑的绘画表面的时候就会这样.如果光线的入射角度稍加调整,反射光就会朝向其他方向了.所以这对于避免眩光来说是很重要的,尽量不要让你的闪光灯直对镜头方向拍摄对象来拍照片,就可以将眩光朝向其他方向而避免掉.(如果你是用的是机内闪光灯不好调整角度,那就调整你的拍摄方向吧.)
+
+### 透明或半透明材料
+
+当然也不是所有材料都是不透明的.干净的玻璃/塑料/水等等,就都是透明的,还有纸/云朵/草叶等等,部分透光,就是半透明的.在这两种材料中,如果只允许特定波长通过,而不许其他波长通过,那么材料就是有颜色的.深红色的玻璃透过红光波段,对所有蓝色光来说都是几乎不透明的.
+
+半透明的材料在聚起来透过去看光源的时候,会有雾蒙蒙的效果,这是由于他们散射了光源,比透明材料看着更朦胧,甚至即便光源不直接从后面照过来也会有这类效果.幻灯机和光盒就都是利用了这个原理.光的质量就类似白色柔光面的反射效果.
+
+### 折射
 
 
 
