--- a/02 光线:图像形成的基础.md
+++ b/02 光线:图像形成的基础.md
@@ -68,7 +68,21 @@ https://zhuanlan.zhihu.com/easycam
 
 ### 折射
 
+当光线以非直角角度从一种折射率介质射入另一种折射率的介质的时候,不仅光的速度会发生变化,还会发生角度变化.这就是折射了,更多科学原理就不在这里展开了,大家可以搜索惠更斯或者菲涅耳之类的经典波动理论解释.
 
+### 完整图像
+
+客观世界中的物体都是在各种光效的混合下才是我们看到的样子,这其中有漫反射/镜面反射,也有光线的吸收/透射/折射等等.一个苹果,朝向阳光直射的一侧有强烈的反射.这时候多数都是漫反射,但光滑的苹果皮上也会有显著地明亮的镜面样高光反射,就再太阳光入射方向与你肉眼观察方向接近的位置.此时苹果另一面的形状和暗调会给出关于苹果形态的更多信息.通过经验,你的眼睛和大脑就认出了这些光线信号对应的是固体和圆形,这时候不需要去触摸苹果你就能知道这些.这就是视觉的核心所在.摄影就允许我们将图片固定下来永久保存,能让其他人也对同样场景进行感受.胶片本身是不能转换我们眼睛当场对光的感受的,而且不同类型的胶片对光和色彩的纪录方式也都不同.随着你逐渐熟悉了你所用的胶片类型,你就开始能够理解这种胶片对光影的相应效果了.如果有数码相机,你就可以改变颜色密度和控制类型等等;不过相机依然不能完整记录你所见的全部光信息,所以这也是摄影的魔力所在:将我们所看到的世界转换成图像.
+
+## 光的密度和距离
+
+距离光源越近,照射到的效果就越明亮.定量来说大概就是减半光源和物体之间距离,可以使得到的亮度提高到四倍.这是因为光显示投射到一个面积为原来1/4大小的新区域上,面积缩小的倍数就等同于亮度增强的倍数.比如如果你是用小的闪光灯或者影视灯来拍肖像,减半距离就得到了四倍亮度.类似的如果把光源移到两倍距离为止,就会导致亮度降低到原来的1/4.在用放大机缩放照片的时候,调整放大机高度也有类似效果.
+
+实践中将这个叫做平方反比定律,即光远距离等于亮度的1/4,这意味着你必须留神在小工作始终对不同距离为指导多个项目进行照明,尤其是使用很硬的紧凑光源的时候.这时候对距离光源最远和最近的拍摄对象来说,都很难制造出理想的光照条件.解决办法就是把光源进一步远离,让这几个拍摄对象之间的距离与光源与他们总体之间的距离相比可以忽略就可以了,或者也可以考虑使用多个光源或者柔光箱之类的配件来柔光.
+
+这种问题就不会困扰晴天的室外摄影.因为太阳距离地球的距离太远了,所以地面上不管是海岸还是山峰,这些距离相对于地球和太阳的距离来说都可以忽略.风光摄影中的亮度变化也可以由当地的气象条件来控制,但绝对不会被太阳距离所影响.如果你在室内拍摄,使用阳光通过小窗户,那么这个窗户本身就扮演了小型闪光灯的角色了.这就会改变光源与物体距离的关系,就和你使用影视灯闪光灯等的情形类似了.
+
+### 让光线成像
 
 
 
