--- a/02 光线:图像形成的基础.md
+++ b/02 光线:图像形成的基础.md
@@ -82,11 +82,24 @@ https://zhuanlan.zhihu.com/easycam
 
 这种问题就不会困扰晴天的室外摄影.因为太阳距离地球的距离太远了,所以地面上不管是海岸还是山峰,这些距离相对于地球和太阳的距离来说都可以忽略.风光摄影中的亮度变化也可以由当地的气象条件来控制,但绝对不会被太阳距离所影响.如果你在室内拍摄,使用阳光通过小窗户,那么这个窗户本身就扮演了小型闪光灯的角色了.这就会改变光源与物体距离的关系,就和你使用影视灯闪光灯等的情形类似了.
 
-### 让光线成像
+## 让光线成像
+
+如果你调整好了设备,照亮了拍摄对象,然后用一片相纸或者胶片之类的对着.当然这也不能看到图像了.因为麻烦的是被摄物体的每个部分都朝向你的相纸表面反射光线.混乱的光线照亮了整体.
+
+所以要从混乱中创造秩序,一种方法就是限制光线,用个不透明的材料挡着,只留在拍摄对象和相纸之间留一个小孔.因为光辉沿着直线传播,这些穿过小孔的光就会成像了.
+
+要看小孔成像,最好是有个完全黑暗的房间,把窗户都严实遮挡好,一点外面的光也不要漏.然后开一个小孔,之后在小孔前面大约三十厘米左右的地方拿着相纸来接收成像.这时候其实你就处在一个相机内部了.前后移动相纸,就可以看到图像如何被清晰捕获了.
+
+如果你的相机镜头可以拆卸,你就可以用类似手段尝试在相机上使用小孔成像.不过实际上真正镜头成像的过程要复杂很多,因为毕竟有各种校正等等.
+
+### 小孔成像的问题
 
 
+小孔成像的清晰度往往较差,边缘都又软又模糊.基本得不到什么清晰锐利的图像细节,不论你怎么调整相纸位置都是如此.这是因为小孔中的那束光线其实还是有发散的,会逐渐变宽.小孔成像的这种效果会使得成像总有点模糊,不过这也成了一种风格了.比如Roger Buchanon就用小孔成像来拍摄风光.
 
+小孔成像另一个问题就是进光量不足,太暗了.调大孔可以增加亮度,但成像质量就更差了.如果你弄了两个孔,就会出现两个孔各自成像的叠覆.
 
+即便你能忍受暗淡的成像,然后想收缩孔径来改善图像细节
 
 
 
