--- a/02 光线:图像形成的基础.md
+++ b/02 光线:图像形成的基础.md
@@ -99,12 +99,26 @@ https://zhuanlan.zhihu.com/easycam
 
 小孔成像另一个问题就是进光量不足,太暗了.调大孔可以增加亮度,但成像质量就更差了.如果你弄了两个孔,就会出现两个孔各自成像的叠覆.
 
-即便你能忍受暗淡的成像,然后想收缩孔径来改善图像细节
+即便你能忍受暗淡的成像,然后想收缩孔径来改善图像细节.可是由于有衍射,你收缩孔径,总会有一个时候发现画质继续下降.
+
+### 使用镜片替代小孔
+
+要让成像更清晰锐利,最好的方法就是开大孔径以增加通光量提高亮度,然后加入一个透镜使得光线弯曲而不是直线传播来汇聚成像提高锐度. 实际应用中的凸透镜的中间厚两边薄,可以汇聚很大范围的光到成像介质上.你拿个放大镜来试试就可以.
+
+使用透镜替代小孔之后,进光量增加了,所以亮度肯定会提高,但成像清晰的前提还是要求成像介质和镜片之间要有某个特定距离,这个距离随着成像对象与镜片之间的距离而有所改变.如果距离不合适,就会使得成像介质上的成像弥散开来,甚至比小孔成像的效果还差,这就叫失焦.
+
+### 焦距和图像尺寸
+
+透镜对光线的弯折能力可以用焦距来衡量.物理上焦距是透镜的光学主轴和焦点的距离,一定要注意并不是物理中心,光学主轴完全不见的对应了镜片的物理中心.焦距受两方面影响,镜片本身的折射率,以及镜片的形状.
+
+长焦镜头弯折光线能力就弱,需要和成像介质之间保持很长距离.而短焦距的镜头弯折光线能力就更强.相机与拍摄对象同样距离下,用长焦拍摄的成像尺寸也要比短焦的尺寸大.
 
 
+### 近摄
 
+随着拍摄对象和镜头之间距离的缩近,镜头和成像介质之间的距离就要伸长;反之是拍摄对象远离镜头,则成像介质所在平面就要移近镜头.所以在近摄对焦的时候,会看到镜头在伸长,而对无穷远对焦的时候镜头最短了.如果远近你都想拍清楚怎么办呢?这就可以用光圈来控制景深了.这部分内容下一章说.
 
-
+自己找个放大镜玩一玩吧,试试对明亮物体比如台灯之类的进行成像实验.注意在成像的时候随着调整透镜和拍摄对象的距离而调整成像面与透镜的距离.
 
 
 
