--- a/02 光线_图像形成的基础.md
+++ b/02 光线_图像形成的基础.md
@@ -9,7 +9,7 @@ https://zhuanlan.zhihu.com/easycam
 
 你并不需要学习物理学,也能拍好照片,不过如果能了解光线的特性以及镜头如何处理光线,能让你在摄影实践上有更宽的视野.实际上核心的物理原理都特别简单,很容易理解.
 
-这本书从光线开始说,因为光是摄影的最本质内容.什么是光?在你要照明一个物体的时候,使用镜头的时候,或者探索了解颜色的时候,知道光的哪些基本性质对你有帮助?从光和颜色开始,我么逐渐趋讨论为什么面或者体呈现养猫,以及光线是如何通过玻璃透镜发生弯曲(折射)来形成可用的像.
+这本书从光线开始说,因为光是摄影的最本质内容.什么是光?在你要照明一个物体的时候,使用镜头的时候,或者探索了解颜色的时候,知道光的哪些基本性质对你有帮助?从光和颜色开始,逐渐去讨论为什么面或者体呈现所属样貌,以及光线是如何通过玻璃透镜发生弯曲(折射)来形成像.
 
 对任何照相机或者放大机来说,镜头都是核心.用一个最简单的玻璃放大镜片,你就能看到镜片成像的效果了.这些内容还会引出后面更多的其他摄影设备方面的内容,也有助于你理解拍摄高质量照片的重点所在.
 
