还是改错字

--- a/02 光线_图像形成的基础.md
+++ b/02 光线_图像形成的基础.md
@@ -51,7 +51,7 @@ https://zhuanlan.zhihu.com/easycam
 
 ### 不透明材料
 
-如果材料完全不透明,比如是金属或者砖石之乐诶的,那么光线就有的被吸收有的被反射,吸收的就成了热.越暗的材料,反射的光越少.因此深色的相机套在阳光下比亮银色的热得更快,因为吸收的光线更多.
+如果材料完全不透明,比如是金属或者砖石之类,那么光线就有的被吸收有的被反射,吸收的就成了热.越暗的材料,反射的光越少.因此深色的相机套在阳光下比亮银色的热得更快,因为吸收的光线更多.
 
 如果材料本身有颜色,就会反射这个颜色所属波段的光,吸收大部分其他波段的颜色光.比如蓝色颜料就会反射蓝光,吸收红光和绿光.但如果你的光线本身缺少某种波长,那么这就会改变对象的颜色效果.举个极端的例子,用深红的光线照射深蓝色的物体,看上去就几乎是纯黑的.你需要弄清楚这些效果,然后才能去使用颜色滤镜(本书第9章).颜色也可以在后期改变,如果你扫描了负片或者数码打印品,就可以在后期用软件来对颜色进行各种调整(参考本书14章).
 
