--- a/01 导论_摄影到底是什么.md
+++ b/01 导论_摄影到底是什么.md
@@ -1,6 +1,6 @@
  
 
-# 基础摄影读书笔记 - 01 摄影是什么
+# 基础摄影读书笔记 - 01 导论:摄影到底是什么
 
 > A Chinese Notes of Basic Photography 
 https://zhuanlan.zhihu.com/easycam
