--- a/03 镜头_控制成像的关键.md
+++ b/03 镜头_控制成像的关键.md
@@ -39,13 +39,64 @@ https://zhuanlan.zhihu.com/easycam
 
 ### 对焦操作
 
+有一种最便宜的相机,上面按照的镜头说是不用对焦.其实更确切说法是泛焦镜头.这意味着镜头预先对焦到了大约2.5m远的地方.这个对焦距离适合常规拍摄用途,另外由于景深很大所以稍微往前往后都不会太明显影响成像锐度.这种镜头成本很低,但限制很多,画质自然不可能很理想了.
+
+所有的镜头厂商制造的镜头都包含了调节对焦距离的组件.一般来说是有两种方案,一种是整个镜头整体前后移动,另一种是镜头中一部分单元前后移动,两者都可以对焦.目前在索尼a7r2等fe卡口相机上使用的国产天宫LM-EA转接环就是第一种原理,将镜头和传感器之间的距离进行调整,从而实现把手动头转接成为自动对焦镜头.对于传统的手动镜头,可以手拧对焦环来调整对焦位置,对于自动镜头来说,就是通过对焦传感器以及步进马达来驱动齿轮旋转移动镜片来进行对焦.
+
+一般来说那种拍立得之类的小相机都不会在镜头上标注对焦距离标尺.单镜头反光相机之类的更复杂的设备上会提供关于镜头的更多控制项目,其中就会有对焦标尺表示当前对焦的距离十多元.所以也可以不去看取景器而估计好拍摄对象的距离,或者是用绳子啊之类的测算好距离,然后直接旋转对焦环来进行拍摄.在电影工业中,用绳子量长度比较普遍.一般来说没必要这么做,不过在光线暗淡的情况下这样也好歹是个办法.
+
+所有镜头都应该能通过设置对教导无穷原来拍摄最远处的物体.一般镜头上超过几十米的距离就被当做是无穷远了.拍摄对象能距离相机的最近拍摄距离取决于好几个因素.机械伤可能很难将镜头继续伸长.焦距越长,对焦环调节的时候需要的物理运动距离也越长.有时候镜头如果是相机的一部分而单独的取景器是分开的的话,近摄对焦也可能被特意避免了.越离得近越容易对焦不准.有时候在近距离对焦的时候镜头还可能无法保持同样的高质量的画面,光学解析力降低.
+
+大画幅相机上的标准镜头需要移动端对焦距离要覆盖到近似于拍摄距离的长度,因为他们焦距特别长.这时候整个相机前面的部分就可以不受制于机身单独运动,二者通过皮腔连接.大画幅相机机身或者镜头上也很少有任何标尺,因为对焦都是通过直接在机背上面的毛玻璃对焦屏上面观察清晰程度来确定的.
 
 
+## 光圈和F值
+
+大多数摄影镜头里面都有一个圆孔叫做光圈,一般是在前后镜组中间的部分.通常都有一系列互相叠放的黑色金属叶片,叫做光圈叶片,这些叶片来控制参加成像的光线规模,从几乎等于镜头直径到只有一点点之间都可以调节.一般是通过镜头上面的光圈环或者光圈拨杆来调节的.在单镜头反光相机上还可能有拨环之类的用于控制镜头光圈.一般相机上镜头光圈都是权爱,拍照的时候才会索道指定尺寸.有点机身或者镜头上面有一个预览按钮,按下去就可以闭合光圈到制定大小然后提前检查拍摄效果.
+
+光圈环上面有一系列的数值,就是F数值.f值越大,实际光圈越小.一般光圈从大到小,F值从小到大排序为:
+
+f/1.4 f/2 f/2.8 f/4 f/5.6 f/8 f/11 f/16 f/22
+
+f值是遵守国际标准的,和图像亮度相关.比如上面的这组f值之中,f/1.4是其中最大的光圈进光量最大,而f/22是最小的进光量最小.同样焦距下光圈越小景深越大,一般小光圈经常用于白天阳光下的拍摄.要注意光圈还不止上面这几个,实际完全可能遇到比f/1.4还大的光圈,或者比f/22还小的光圈.
+
+上面的光圈F值排序中每一档和上一档相比收缩了面积为原来的1/2,进光量也收缩了1/2.由于光圈位置在镜头正中间,所以其明暗效果对于整个视域内都有效.
+
+f值系统意味着具有同样f值的镜头会给出同样的标准图像亮度,不论什么画幅或者焦距.你可以更换相机和镜头,但只要设置f值是同样的,同时也保证一样的快门速度和ISO感光度,那就能保证一直得到同样的成像亮度.
+
+### f值的原理
+
+f值= 镜头焦距长度÷有效通光孔径
+
+这里的f指代的其实是镜头焦距 focal length,而f/1.4表示的就是光圈直径是焦距长度的1/1.4,所以很明显能知道f/2.8的光圈相比f/1.4缩小了一半的直径,面积就只有四分之一了,进光量自然也只有四分之一了,很好理解.
+
+不同镜头的光圈值上下范围还不同,大多数小底相机的最小光圈也就是f/16或者f/22.更大的插片相机的镜头可能会有f/32甚至f/45的光圈.小光圈可以用来形成极大的景深,但是太小的话随之而来的衍射效应优惠严重损坏成像细节.因此镜头光圈顶多也就到小孔成像那样小,没有做特别特别小的.
+
+一个镜头上的最大光圈,即f值,以及镜头焦距,就可以命名区分镜头了,一般是蚀刻在镜筒上面.有的镜头焦距一样,一个光圈比另外一个大一档,价格可能就要翻倍.这额外的支出成本会给你带来在暗光下以更快速度拍摄的效果.所以这其实还是一个性价比的问题.
+
+如果能确定你的拍摄场景,其实就可以也许能省下钱,比如如果你只在白天拍摄户外风光,那就完全没必要买太大光圈的高速镜头,没必要花多出来的钱.
+
+## 景深
+
+景深,指的是在成像介质上成的像中能够提供足够清晰细节的最近和最远物体之间的距离差.
+
+对于特定焦距的镜头来说,光圈越大景深越小,光圈越小景深越大.景深有两个重要效果:首先是当你近距离拍摄的时候景深会很小,而远距离拍摄物体的时候景深通常都很大;另外同样光圈下焦距越长的镜头景深越小,越是短焦距的镜头景深越大.
 
 
+### 实践意义
+
+在拍摄的时候一定要能控制好景深,使其服务于你的拍摄意图,而不是造成干扰.通过浅景深效果可以突出主体弱化背景干扰.这就可以起到强调之类的效果,而且可以避免周围杂物影响观看体验.这种图片都被称为差异对焦的.但你用最大光圈得到浅景深的时候就意味着你必须精确对焦,否则景深太浅就很容易对焦不准到其他位置.另外就是曝光问题,比如在亮光线下使用大光圈,还要向yoga慢速快门制造动感模糊,那就很悲剧了.
+
+另外一方面还可以使用最大景深来使你的图片尽量最大程度包含全部信息.衣服清晰锐利的图片可以让观看者来决定关注对象,而不是只由拍摄者来引导.不过这时候一定要尽量注意避免前后景中出现干扰内容啥的.
+
+几乎所有单反相机都可以在全开光圈下尽可能让图像明亮,以便对焦.而只在曝光的时候才会缩到设置好的光圈.相机允许你以设置好的光圈来进行景深预览.这个功能很有用,因为你可以检查对焦区域的范围啥的.另外有的镜头也可能在镜筒上面有景深标尺.
+
+有时候你没办法在缩小到设置好的光圈下得到足够的精神,比如光线可能太暗淡或者胶片感光度太低需要长时间曝光等等.这时候无论怎么做都会使图像更小.有点要么是往后退,要么是使用更短焦距的镜头或者更小底的相机.然后你可以再去放大和裁剪.
+
+如果条件允许你可以尝试使用三脚架或者独脚架,否则长曝光的时候如果有一丁点移动就糊了.
 
 
-
+## 景深的效果
 
 
 
