--- a/03 镜头_控制成像的关键.md
+++ b/03 镜头_控制成像的关键.md
@@ -98,6 +98,24 @@ f值= 镜头焦距长度÷有效通光孔径
 
 ## 景深的效果
 
+要理解为光圈怎么控制景深,可以回顾一下,镜头如何讲一个图片上的点聚焦到某一距离上,这取决于镜头和拍摄对象的距离.拍摄对象的其他部分距离镜头或远或近,对焦距离也或远或近,就形成了弥散的圆点,而不是聚焦的锐利的点.这种圆圈就叫做弥散圆.大尺寸的弥散圆叠加在一起就导致了模糊的图像.不过如果弥散圆相对来说比较小,看上去就也还很锐利,因为人眼的解析能力有上限.
+
+当用人眼最终查看打印出来的图片的时候,即便有的地方不是锐利的点而是弥散圆,也可能看上去还是很清晰的.大多数人眼能看作锐利的上线大概就是最终印刷品上大约0.25mm直径的点.对于计算机屏幕等等也是类似道理.35mm胶片的镜头制造商一般是假设最终放大的成像尺寸大约在25×20cm(10×8英寸),大概也就是胶片放大8倍,以此为标准来得到了在胶片上面可接受的弥散圆尺寸就是0.25mm÷8=0.03mm.
+
+由于这个尺寸以内的弥散圆成像内容都可以看作清晰锐利,所以对焦位置前后一定范围内看上去都是合焦的.如果镜头光圈更小了,那么光线孔径就更狭窄了,这样图像上对焦位置更远和更近的地方也都落在了可接受弥散圆范围内,这样就扩大了景深了.
+
+然后回过头来,如果你远离拍摄对象来移动,或者要改换用短焦距镜头,那么主体最远和最近的部分就都聚在一起成了清晰对焦的部分了.这样弥散圆都更小了,也就扩大了景深了.
+
+所以要记住,在以下情况下你都会得到大景深(很大范围内都清晰):
+* 小光圈
+* 远距离拍摄对焦主体
+* 短焦距
+
+还有一个效果,就是当拍摄对象距离镜头大约十倍焦距的距离的时候,景深向后比向前要更远.因此摄影师常说:对焦位置在三分之一处.意思就是对较大位置大概在需要的景深的三分之一位置.不过如果是近距离拍摄,景深在对焦主体距离前后的延伸就更趋近于相等了.s
+
+### 使用镜头上的景深标尺
+
+
 
 
 
