第三章完毕

--- a/03 镜头_控制成像的关键.md
+++ b/03 镜头_控制成像的关键.md
@@ -115,6 +115,40 @@ f值= 镜头焦距长度÷有效通光孔径
 
 ### 使用镜头上的景深标尺
 
+有点镜头上面会有一个景深标尺,挨着对焦标尺位置上.这个标尺是大概告诉你景深范围,当你使用超焦距盲拍的时候,来不及细致对焦,就可能要用到景深标尺了.景深标尺上面还标记了在拍摄不同距离场景的时候会得到的景深范围.比如如果一个镜头对焦到无穷远,这就丢失了地平线内一半景深了,然后调整对焦环,对焦到你需要成像清晰的最近距离位置和无穷远中间的中间位置.这就是对于所用的光圈值f值的超焦距方法.这时候调整对焦位置,你的景深就会从一般距离一直扩展到地平线.
+
+在一些廉价相机里面,精神也被利用来简化成像设置.比如拍摄山脉轮廓就要设置为超焦距;拍摄一群人一般就是对焦在3.5米左右;单人头像就是2米左右对焦.这种镜头光圈都很小,所以景深范围跌幅在一起.用户只要设置到对应状态就基本都能得到可以接受的成像了.
+
+要注意,景深不是向数字那样截然的,而是一个渐变的范围,锐利程度逐渐降低.多数情况下还要看你如何判断弥散圆的可接受尺寸.如果你要大尺寸放大,那就会发现锐利程度降低了,景深也就缩减了,不过对于印刷品来说观看距离也要考虑.所以即便你的相机允许你进行景深预览,当时你在取景器或者小屏幕上面看着还觉得挺锐利,而实际上一放大印出来之后你就可能很失望了.有的摄影师需要得到超大尺寸下的颗粒感效果.这种颗粒效果有多种途径能够实现:高ISO即高感光度下的颗粒会比低感光度低ISO下的颗粒更显著;从小尺寸负片冲印出超大尺寸印刷品也会带来颗粒感;处理胶片的过程中也能制造颗粒感.
+
+## 焦深
+
+经常有人弄混淆焦深和景深.景深关注的是在特定镜头设置下不同距离拍摄对象的成像;而焦深是指改变镜头到成像的距离而不至于让成像显著模糊的距离.因此焦深关注的是相机或者放大机上面的镜头到胶片或者传感器的距离容忍度,以及对焦的精确程度.
+
+当然,焦深和景深还是有一点相似之处的.光圈收效以及可允许弥散圆的扩大都会提高焦深.不过距离拍摄越近或者使用更长焦距镜头也都能提升焦深.(这两者都导致光线从镜头中汇聚得更远,使光束狭窄了.)这些特征在实践中意味着:
+
+* 小底相机需要比大底相机进行更精确的对焦.这是因为其对应的标准焦距更短,所以可接受弥散圆也更小了.大底相机就不需要考虑去等效35mm胶片的同样对焦精度之类的,而且更大的精神也允许更多的相机移动空间.
+* 当相机或者放大机在进行可视化对焦的时候,镜头通常都是在最大光圈.这使得焦深最小,可以看清楚最锐利的部分在哪里.
+* 当时用相机来拍摄超近距离的物体的时候,也就是微距拍摄的情况下,最简单方法是先调整镜头对焦来让图片大概为正确尺寸,然后整体移动相机来精细对焦.这些条件下就应该利用浅景深来对焦,而不是去在焦深上纠缠,否则你就要花很长时间来精细调整镜头对焦位置.
+
+
+## 图像稳定性
+
+防抖,算是比较新的技术,也叫图像稳定技术,在很多手机啊相机上都会有.具体实现方法就是有一个运动传感器系统检测相机的移动,然后反向移动光学元件来抵消抖动,使图像稳定.这个系统能够降低抖动,允许快门速度可以降低两档.有防抖功能的镜头价格比平常版本要贵,但是能提升成像质量,尤其是对于长焦望远镜头来说效果很显著.
+
+## 特定画幅镜头
+
+有点单反镜头只适用于小画幅的数码相机.这就意味着镜头设计上可能就不能覆盖35mm全画幅的整个传感器范围,而只能覆盖一个APS-C画幅的范围.比如佳能的EF-S系列的镜头,宾得的部分DA系列镜头,适马的DC镜头,都是只能覆盖APS-C画幅.少数宾得的DA镜头,比如DA50和DA35,可以覆盖35mm全画幅.
+
+## 镜头保护
+
+镜头可能是相机系统或者放大机系统中最重要的部分了.所以尽量要保护好其玻璃表面.可以使用镜头遮光罩或者镜头盖或者UV镜之类的来做防护.不过UV镜片一旦碎裂变形了拿不下来也是个坑,所以要多做权衡.尽量不要没有任何镜头防护就直接拿着镜头用.镜片上面一点小灰尘什么的都不太要紧.但要是手指上的油脂沾染了或者刮伤了镜片表面或镀膜,那就会有很明显的画质损失了.
+
+灰尘之类的最好用气吹吹掉.油脂之类的可以用镜头纸来擦拭掉.如果近会很严重,可以请人拆开清理.要是发霉了,那就悲剧了,就需要拆开镜片来用过氧化氢和氨水或者专用的清洗溶液来清晰了.具体细节可以参考[这篇文章](http://zhuanlan.zhihu.com/p/28707569).
+
+不过也别太强迫症,没必要总去清洁镜头.而且也不像某些坏人教唆的那样用唾液或者衣服随便用力擦拭镜头.收二手镜头的时候千万小心别买到发霉的,除非你有信心自己清理或者愿意花钱请人帮忙清理.
+
+另外镜头遮光罩不仅可以保护镜头,还能避免杂光的干扰,挺有用的.
 
 
 
