--- a/01 导论_摄影到底是什么.md
+++ b/01 导论_摄影到底是什么.md
@@ -166,7 +166,7 @@
 
 Katy Grannan拍摄的肖像令人印象深刻,检验了拍摄对象想要在镜头面前表现出的样子.她的早期作品是拍摄的一个陌生人的肖像,他们通过新闻广告认识的.她的照片并不具有纪录性,而是充满舞台效果.她的人物都摆着姿势,内容和含义都基于敏锐的观察和细致的姿势设计.她拍摄的风光之类的照片受到她在美国西北生活经历的影响,在这些独特环境中,她对每个修饰性的背景内容都投入了大量精力,展现得都平凡但又具有丰富细节.拍摄对象有的穿服装,有的不穿,配合Grannan做出特定姿势,从而是拍出来的照片有一种微妙又逐渐增强的亲密感.
 
-同时代的很多其他摄影师走得更极端,将这种舞台影像拍摄得极其逼真,如, such as Jeff Wall, Hannah Starkey, Gregory Crewdson,他们都创建舞台造型重现,拍摄已经发生的事件,而原来的角色都被换成了演员,或者让整个场景都看上去好像是处在真实之中.当然,舞台造型已经出现很久了,从摄影术发明的时代就开始有了.
+同时代的很多其他摄影师走得更极端,将这种舞台影像拍摄得极其逼真,如 Jeff Wall, Hannah Starkey, Gregory Crewdson,他们都创建舞台造型重现,拍摄已经发生的事件,而原来的角色都被换成了演员,或者让整个场景都看上去好像是处在真实之中.当然,舞台造型已经出现很久了,从摄影术发明的时代就开始有了.
 
 另外还有Julia Margaret Cameron 和 H. P. Robinson等摄影者着重于以叙事的方式进行拍摄.这种舞台方法在电影中用的很多,在时尚摄影和广告静态摄影中也用的很多.
 
